<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_columnSpan="3"
    android:gravity="center"
    android:orientation="horizontal"

    >
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textSize= "@dimen/textSize10" />
        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textSize="10dp" />
        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textSize="10dp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textSize="10dp" />
        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="10dp" />
        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:textSize="10dp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textSize="10dp" />
        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:textSize="10dp" />
        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:textSize="10dp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/_0"
            android:textSize="10dp" />
        <Button
            android:id="@+id/button_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_point"
            android:textSize="10dp" />
    </TableRow>

</TableLayout>